--- a/package.json
+++ b/package.json
@@ -40,9 +40,12 @@
       "aurelia-logging-console": "npm:aurelia-logging-console@^1.0.0",
       "aurelia-pal-browser": "npm:aurelia-pal-browser@^1.0.0",
       "aurelia-polyfills": "npm:aurelia-polyfills@^1.1.1",
+      "aurelia-router": "npm:aurelia-router@^1.0.0-rc.1.0.0",
       "aurelia-templating-binding": "npm:aurelia-templating-binding@^1.0.0",
       "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0",
       "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0",
+      "bootstrap": "github:twbs/bootstrap@^3.3.7",
+      "css": "github:systemjs/plugin-css@^0.1.29",
       "fetch": "github:github/fetch@^1.0.0",
       "font-awesome": "npm:font-awesome@^4.6.3",
       "jquery": "npm:jquery@^3.1.1",
